@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- Vision ZP3102 PIR Motion Sensor -->
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+        <!-- COMMAND_CLASS_CONFIGURATION -->
+        <!--    IMPORTANT: Controllers may only allow to configure signed values.
+                In order to set values in the range 128...255 the value sent in the application shall be the desired value minus 256.
+                For example: to set a parameter to 200? it may be needed to set a value of 200 minus 256 = minus 56.
+                In case of two byte value the same logic applies: Values greater than 32768 may needed to be given as negative values too.-->
+        <CommandClass id="112">
+                <Value type="byte" genre="config" index="1" label="Re-Trigger Waiting Time" units="minutes" min="1" max="255" value="3">
+                    <Help>Time until an associated device will turn off if no new movement is detected</Help>
+                </Value>
+                <Value type="list" genre="config" index="2" label="Celcius/Fahrenheit" size="1" min="0" max="1" value="0">
+                    <Help>Report temperature in Celcius or Fahrenheit</Help>
+                    <Item label="Celcius" value="0" />
+                    <Item label="Fahrenheit" value="1" />
+                </Value>
+                <Value type="byte" genre="config" index="3" label="Sensitivity" units="" min="1" max="7" value="4">
+                    <Help>Sensitivity 1-7 (1 = most sensitive, 7 = most insensitive. 4 is default)</Help>
+                </Value>
+                <Value type="byte" genre="config" index="4" label="Temperature adjustment" units="Degrees Celsius" min="0" max="255" value="0">
+                    <Help>-10 to -1, 0 to 10 (Signed decimal: 246 to 255, 0 to 10)</Help>
+                </Value>
+        </CommandClass>
+
+        <!-- COMMAND_CLASS_BASIC -->
+        <CommandClass id="32" setasreport="true"/>
+
+        <!-- COMMAND_CLASS_ASSOCIATION -->
+        <CommandClass id="133">
+                <Associations num_groups="1">
+                        <Group index="1" max_associations="5" label="Basic on/off group for detecting movements" auto="true"/>
+                </Associations>
+        </CommandClass>
+
+</Product>
